# mqt-qusat

./: .cirrus.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .license-tools-config.json  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py
.github/: codecov.yml  contributing.md  contributing.rst  dependabot.yml  release-drafter.yml  support.md  support.rst
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  deploy.yml  update-mqt-core.yml
cmake/: ExternalDependencies.cmake  FindZ3.cmake
examples/: bell.qasm  ghz.qasm  simons.qasm
include/: SatEncoder.hpp  Statistics.hpp
include/satencoder/: SatEncoder.hpp
mqt/qusat/: CMakeLists.txt  __init__.py  bindings.cpp
results/: CS-127-07-03-2022.json  CS-20-07-03-2022.json  CS-5-07-03-2022.json  CS-65-07-03-2022.json  EC-07-03-2022.json  EC-08-03-2022.json  G-1-07-03-2022.json  G-2-07-03-2022.json  G-3-07-03-2022.json  QB-10-07-03-2022.json  QB-1000-07-03-2022.json  QB-250-07-03-2022.json  QB-50-07-03-2022.json  benchmarkCS127-24-02-2022.json  benchmarkCS20-24-02-2022.json  benchmarkCS5-24-02-2022.json  benchmarkCS65-24-02-2022.json  benchmarkEC-24-02-2022.json  benchmarkGt2-24-02-2022.json  benchmarkGt22-24-02-2022.json  benchmarkQB250-24-02-2022.json  out1.csv  visualizer.py
src/: CMakeLists.txt  SatEncoder.cpp
src/mqt/qusat/: __init__.py  pyqusat.pyi
src/python/: CMakeLists.txt  bindings.cpp
src/satencoder/: SatEncoder.cpp
test/: CMakeLists.txt  test_satencoder.cpp
test/python/: test_ec.py
test/results/: benchmarkG1-24-02-2022.json  benchmarkG2-24-02-2022.json  benchmarkG3-24-02-2022.json  benchmarkQB10-24-02-2022.json  benchmarkQB1000-24-02-2022.json  benchmarkQB50-24-02-2022.json  ec-out-final.csv
